--- a/app-cadastro-pessoa/app/src/main/res/layout/activity_cadastro_pessoas.xml
+++ b/app-cadastro-pessoa/app/src/main/res/layout/activity_cadastro_pessoas.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:layout_margin="16dp"
     android:orientation="vertical"
-    tools:context="com.agateownz.testapplication.ActivityCadastroPessoas">
+    tools:context="com.agateownz.testapplication.activities.ActivityCadastroPessoas">
 
     <LinearLayout
         android:id="@+id/lnl_nome"
