--- a/app-cadastro-pessoa/app/src/main/res/layout/activity_main.xml
+++ b/app-cadastro-pessoa/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:layout_margin="16dp"
     android:orientation="vertical"
-    tools:context="com.agateownz.testapplication.MainActivity">
+    tools:context="com.agateownz.testapplication.activities.MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
