--- a/app-cadastro-pessoa/app/src/main/res/layout/activity_main.xml
+++ b/app-cadastro-pessoa/app/src/main/res/layout/activity_main.xml
@@ -13,13 +13,12 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <EditText
+        <AutoCompleteTextView
             android:id="@+id/txt_pesquisar"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:ems="10"
-            android:inputType="textPersonName" />
+            android:layout_height="wrap_content"
+            android:layout_weight="3"
+            android:hint="@string/lbl_dica_busca" />
 
         <ImageButton
             android:id="@+id/btn_adicionar"
